# tin-core

./: .gitignore  INSTALL.md  LICENSE  Makefile.am  README.md  configure.ac
src/: Makefile.am  friends.c  friends.h  groups.c  groups.h  tin_api.c  tin_api.h  tincore.c  tincore.h  util.c  util.h
